[gd_scene load_steps=2 format=3 uid="uid://cj1x4g7bkq4rt"]

[ext_resource type="Script" path="res://addons/ac_engine/scripts/combat_shop.gd" id="1_480bj"]

[node name="CombatShop" type="Control"]
layout_mode = 3
anchor_left = 0.722
anchor_right = 0.722
offset_left = -831.744
offset_right = -511.744
offset_bottom = 832.0
script = ExtResource("1_480bj")

[node name="UserInterface" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 832.0

[node name="Panel" type="Panel" parent="UserInterface"]
layout_mode = 2

[node name="LabelCollection" type="Label" parent="UserInterface/Panel"]
layout_mode = 0
offset_top = 48.0
offset_right = 320.0
offset_bottom = 80.0
text = "COLLECTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnHide" type="Button" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 58.0
offset_bottom = 48.0
text = "<"

[node name="ScrollContainer" type="ScrollContainer" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 312.0
offset_bottom = 824.0
horizontal_scroll_mode = 0

[node name="ItemContainer" type="VBoxContainer" parent="UserInterface/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 72.0
offset_right = 312.0
offset_bottom = 96.0

[node name="BtnShow" type="Button" parent="."]
layout_mode = 0
offset_top = 704.0
offset_right = 320.0
offset_bottom = 768.0
text = "COLLECTION"
